[package]
name = "makeitbig"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
